fixed: blog image overlapping nav bar

--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ h1, h2, h3, h4, h5, h6{
     border-bottom-right-radius: 0.5rem;
     position: sticky;
     top: 0;
+    z-index: 200;
 }
 
 .nav-container .nav-pills {
